--- a/.jshintrc
+++ b/.jshintrc
@@ -7,6 +7,7 @@
   // Define globals exposed by Node.js.
   "node": true,
 
+  "predef": ["$", "document"],
   /*
    * ENFORCING OPTIONS
    * =================
